Implement opening narrative gate and redesigned start screen

--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -490,6 +490,7 @@ body{
     <div style="width:1px;height:20px;background:var(--border2)"></div>
     <span class="wave-num" id="hdr-wave">Wave 1/12</span>
     <span style="font-size:11px;color:var(--txt3)" id="hdr-lvl">Lv.1</span>
+    <div id="hdr-root-depth" style="display:flex;align-items:center;gap:4px;font-size:11px;color:var(--txt3)"></div>
     <div style="display:flex;align-items:center;gap:3px;font-family:'Share Tech Mono',monospace;font-size:12px;color:var(--gold)">ᛋ<span id="hdr-gold">0</span></div>
     <div style="display:flex;align-items:center;gap:3px;font-family:'Share Tech Mono',monospace;font-size:12px;color:var(--salvage)">ᚱ<span id="hdr-salvage">0</span></div>
     <div style="margin-left:auto;display:flex;gap:8px">
@@ -1819,6 +1820,7 @@ function updateMetaHeader(){
   const el2=document.getElementById('leg-salvage');if(el2)el2.textContent=META.salvage;
   const el3=document.getElementById('leg-relics');if(el3)el3.textContent=META.relics||0;
   const hs=document.getElementById('hdr-salvage');if(hs)hs.textContent=META.salvage;
+  updateRootDepthHeader();
 }
 
 function renderHero(){
@@ -3431,37 +3433,233 @@ function setHouseNameFromInput(){
   };
 })();
 
+
+function rootDepthIcon(tier){
+  // Returns a colored ᚢ rune representing Ragnarök depth
+  const t=Math.max(0,Math.min(15,tier||0));
+  let color;
+  if(t===0) color='var(--txt3)';
+  else if(t<=3) color='#c8cce8';
+  else if(t<=7) color='var(--amber)';
+  else if(t<=11) color='#c07810';
+  else color='#8a1010';
+  const glow=t>=12?';text-shadow:0 0 6px rgba(180,20,20,.5)':'';
+  return `<span style="color:${color}${glow};font-size:14px">ᚢ</span>`;
+}
+
+function rootDepthLabel(tier){
+  if(!tier||tier===0) return '';
+  const TIER_NAMES=[
+    '',
+    'First Root Darkens','The Wolves Stir','Mist Thickens',
+    'The Dead Remember','Jörmungandr Stirs','The Norns Bargain',
+    'Surtr Sends Scouts','Bifröst Cracks','Root Harvest',
+    'Elites Without Season','Fimbulwinter Arrives',"The Gnawer's Influence Spreads",
+    'Eitr in the Air','Twilight Accelerates','True Ragnarök'
+  ];
+  return TIER_NAMES[tier]||`Tier ${tier}`;
+}
+
+function updateRootDepthHeader(){
+  const el=document.getElementById('hdr-root-depth');
+  if(!el) return;
+  const tier=META.ragnarökActive||0;
+  if(tier===0){el.innerHTML='';el.title='';return;}
+  el.innerHTML=`${rootDepthIcon(tier)} <span style="font-family:'Share Tech Mono',monospace;font-size:10px">R${tier}</span>`;
+  el.title=rootDepthLabel(tier);
+}
+
+function showOpeningNarrative(){
+  // Mark as seen immediately so a crash during the overlay doesn't re-show it
+  META.hasSeenOpening=true;
+  saveMeta();
+
+  const lines=[
+    'The World Tree is sick.',
+    'Something moves in the roots. The branches thin. The realms that hang from Yggdrasil grow colder, stranger, more dangerous — as though something beneath is feeding.',
+    'The Allfather has no answer yet. Only a belief: that the right bloodline, shaped across enough trials, might reach the source.',
+    'You are not the hero. You are the line itself — the thread that persists when each champion falls. You choose who carries it next. You decide what each saga leaves behind.',
+  ];
+
+  const lineHTML=lines.map((l,i)=>`
+    <p style="
+      color:${i===3?'var(--txt)':'var(--txt2)'};
+      font-size:${i===3?'13px':'12px'};
+      line-height:1.8;
+      margin-bottom:${i===3?'0':'14px'};
+      font-weight:${i===3?'700':'400'};
+      opacity:0;
+      animation: fadeInLine .6s ease forwards;
+      animation-delay:${(i+1)*1.1}s;
+    ">${l}</p>
+  `).join('');
+
+  const html=`
+    <div style="text-align:center;padding:8px 0 20px">
+      <div style="
+        font-size:28px;
+        color:var(--txt3);
+        margin-bottom:28px;
+        opacity:0;
+        animation: fadeInLine 1.2s ease forwards;
+        animation-delay:.2s;
+      ">ᚢ</div>
+      <div style="text-align:left;margin-bottom:28px">
+        ${lineHTML}
+      </div>
+      <button id="opening-begin-btn" class="btn btn-primary" disabled style="
+        opacity:0;
+        animation: fadeInLine .6s ease forwards;
+        animation-delay:${(lines.length+1)*1.1}s;
+        padding:10px 32px;
+        font-size:14px;
+      " onclick="hideOverlay();showStartScreen()">Begin</button>
+    </div>
+  `;
+
+  if(!document.getElementById('narrative-style')){
+    const style=document.createElement('style');
+    style.id='narrative-style';
+    style.textContent=`@keyframes fadeInLine { from{opacity:0;transform:translateY(4px)} to{opacity:1;transform:none} }`;
+    document.head.appendChild(style);
+  }
+
+  showOverlayContent(html);
+  const enableAfter=((lines.length+1)*1.1+0.65)*1000;
+  setTimeout(()=>{
+    const btn=document.getElementById('opening-begin-btn');
+    if(btn) btn.disabled=false;
+  },enableAfter);
+}
+
 // --- Show house on start screen (override) ---
 function showStartScreen(){
   normalizeMeta();
-  const hasRetired = META.retiredPool && META.retiredPool.length>0;
-  let html=`<div style="font-family:'Orbitron',sans-serif;font-size:22px;font-weight:900;color:var(--violet);margin-bottom:6px;text-shadow:0 0 20px rgba(144,80,232,.6)">ᚠ RUNESAGA</div>
-  <div style="font-family:'Share Tech Mono',monospace;font-size:11px;color:var(--gold);margin-bottom:12px">ᛟ House ${META.houseName} · Relics 🗿${META.relics} · Scar Tokens 🩹${totalScarTokens()}</div>
-  <p style="color:var(--txt2);margin:8px 0 18px;line-height:1.7;font-size:12px">Raise a Champion. Forge a Legacy.<br>Invoke <span style="color:var(--violet)">Runes</span> · Find synergies · Build your lineage.</p>`;
-  if(hasRetired){
-    html+=`<div style="background:rgba(212,160,23,.08);border:1px solid rgba(212,160,23,.3);border-radius:5px;padding:10px;margin-bottom:14px;font-size:11px;color:var(--txt2)">
-      🏛 You have <strong style="color:var(--gold)">${META.retiredPool.length}</strong> retired ${META.retiredPool.length===1?'hero':'heroes'} ready for breeding.
-      <span style="color:var(--txt3)">Go to Legacy → Breeding to create a stronger generation.</span>
-    </div>`;
+
+  // Gate: show opening narrative on first ever launch
+  if(!META.hasSeenOpening){
+    showOpeningNarrative();
+    return;
   }
-  html+=`<div style="margin:0 0 14px"><label style="font-size:11px;color:var(--txt3);display:block;margin-bottom:6px;letter-spacing:1px;text-transform:uppercase">Run Seed (optional)</label>
-    <input id="seed-input" type="text" placeholder="Leave blank for random" style="width:100%;background:var(--bg2);border:1px solid var(--border2);color:var(--txt);padding:8px 12px;border-radius:4px;font-size:12px;font-family:'Share Tech Mono',monospace;text-align:center;outline:none"></div>
+
+  closeDrawers();
+
+  const hasRetired=META.retiredPool&&META.retiredPool.length>0;
+  const retiredCount=META.retiredPool?META.retiredPool.length:0;
+  const fallenCount=META.fallenLedger?META.fallenLedger.length:0;
+  const activeTier=META.ragnarökActive||0;
+  const maxTier=META.ragnarökTier||0;
+  const tierName=rootDepthLabel(activeTier);
+  const tierOmen=(typeof RAGNARÖK_TIERS!=='undefined'&&activeTier>0)
+    ? ((RAGNARÖK_TIERS[activeTier-1]&&RAGNARÖK_TIERS[activeTier-1].omen)||'') : '';
+
+  let html=`
+    <div style="text-align:center;margin-bottom:4px">
+      <div style="font-family:'Orbitron',sans-serif;font-size:20px;font-weight:900;
+                  color:var(--violet);text-shadow:0 0 20px rgba(144,80,232,.6)">ᚠ RUNESAGA</div>
+    </div>
+
+    <div style="background:rgba(212,160,23,.06);border:1px solid rgba(212,160,23,.2);
+                border-radius:6px;padding:10px 14px;margin:10px 0 14px;text-align:left">
+      <div style="font-family:'Orbitron',sans-serif;font-size:13px;font-weight:900;
+                  color:var(--gold);letter-spacing:1px">ᛟ House ${META.houseName}</div>
+      <div style="font-size:10px;color:var(--txt3);margin-top:4px;font-family:'Share Tech Mono',monospace">
+        ${fallenCount} saga${fallenCount!==1?'s':''} closed · ${retiredCount} thread${retiredCount!==1?'s':''} endure
+      </div>
+      ${activeTier>0?`
+        <div style="margin-top:6px;display:flex;align-items:center;gap:6px">
+          ${rootDepthIcon(activeTier)}
+          <span style="font-size:11px;font-weight:700;color:var(--amber)">${tierName}</span>
+        </div>
+        ${tierOmen?`<div style="font-size:10px;color:var(--txt3);font-style:italic;margin-top:3px">"${tierOmen}"</div>`:''}
+      `:`
+        <div style="font-size:10px;color:var(--txt3);margin-top:4px;font-style:italic">
+          The root is uncharted. No depth selected.
+        </div>
+      `}
+    </div>
+  `;
+
+  if(hasRetired){
+    html+=`
+      <div style="background:rgba(64,224,120,.06);border:1px solid rgba(64,224,120,.2);
+                  border-radius:5px;padding:8px 12px;margin-bottom:12px;font-size:11px;color:var(--txt2)">
+        🏛 ${retiredCount} hero${retiredCount!==1?'es':''} await in the Hall. The thread grows stronger.
+      </div>
+    `;
+  }
+
+  if(maxTier>0){
+    html+=`
+      <div style="margin-bottom:14px">
+        <div style="font-size:10px;color:var(--txt3);letter-spacing:1px;text-transform:uppercase;
+                    margin-bottom:6px">Root Depth — Choose how deep</div>
+        <div style="display:flex;align-items:center;gap:10px">
+          <button class="btn btn-sm btn-ghost" onclick="adjustRagnarökActive(-1)"
+                  ${activeTier<=0?'disabled style="opacity:.4"':''}>◀</button>
+          <div style="flex:1;text-align:center">
+            ${rootDepthIcon(activeTier)}
+            <span style="font-family:'Share Tech Mono',monospace;font-size:12px;
+                         color:var(--gold);margin-left:6px">${activeTier===0?'Surface (Tier 0)':`Tier ${activeTier}: ${tierName}`}</span>
+          </div>
+          <button class="btn btn-sm btn-ghost" onclick="adjustRagnarökActive(1)"
+                  ${activeTier>=maxTier?'disabled style="opacity:.4"':''}>▶</button>
+        </div>
+        ${activeTier>0?`
+          <div style="font-size:10px;color:var(--txt3);text-align:center;margin-top:4px;font-style:italic">
+            "You descend the root."
+          </div>
+        `:''}
+      </div>
+    `;
+  }
+
+  html+=`
+    <div style="margin-bottom:14px">
+      <button class="btn btn-sm btn-ghost" style="width:100%;font-size:10px"
+              onclick="document.getElementById('seed-wrap').style.display=(document.getElementById('seed-wrap').style.display==='none'?'block':'none')">
+        Advanced ▾
+      </button>
+      <div id="seed-wrap" style="display:none;margin-top:8px">
+        <label style="font-size:10px;color:var(--txt3);display:block;margin-bottom:4px;
+                       letter-spacing:1px;text-transform:uppercase">Run Seed (optional)</label>
+        <input id="seed-input" type="text" placeholder="Leave blank for random"
+          style="width:100%;background:var(--bg2);border:1px solid var(--border2);
+                 color:var(--txt);padding:8px 12px;border-radius:4px;font-size:12px;
+                 font-family:'Share Tech Mono',monospace;text-align:center;outline:none">
+      </div>
+    </div>
+
     <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <button class="btn btn-primary" style="flex:2;min-width:200px;padding:11px" onclick="startNewRunFromOverlay()">▶ Start New Run (Founder)</button>
-      <button class="btn btn-gold" style="flex:1;min-width:130px;padding:11px" onclick="hideOverlay();showLegacy()">ᛟ Hero Hall</button>
-    </div>`;
+      <button class="btn btn-primary" style="flex:2;min-width:180px;padding:11px"
+              onclick="startNewRunFromOverlay()">▶ Begin New Saga</button>
+      <button class="btn btn-gold" style="flex:1;min-width:120px;padding:11px"
+              onclick="hideOverlay();showLegacy()">ᛟ Hero Hall</button>
+    </div>
+  `;
+
   showOverlayContent(html);
+  updateDifficultyUI();
+  syncChromeHeights();
+}
+
+function adjustRagnarökActive(delta){
+  normalizeMeta();
+  const maxTier=META.ragnarökTier||0;
+  META.ragnarökActive=Math.max(0,Math.min(maxTier,(META.ragnarökActive||0)+delta));
+  saveMeta();
+  showStartScreen();
 }
 
 // --- Ensure founder record uses house + aspect naming ---
 function startFirstHero(){
   normalizeMeta();
-  const founder = mkHeroRecord(genName(0,'Steel',null,null), 0, [], emptyEVs(), []);
-  founder.birthAspect = 'Steel';
-  founder.birthFlags = {};
-  META.family[founder.id] = founder;
+  const founder=mkHeroRecord(genName(0,'Steel',null,null),0,[],emptyEVs(),[]);
+  founder.birthAspect='Steel';
+  founder.birthFlags={};
+  META.family[founder.id]=founder;
   saveMeta();
-  initGame(null, emptyEVs(), [], founder);
+  initGame(null,emptyEVs(),[],founder);
 }
 
 // --- Award aspect XP on retire/victory/fallen, and show fallen harvest ---
@@ -3503,9 +3701,32 @@ function startFirstHero(){
 window.onload = ()=>{
   loadMeta();
   normalizeMeta();
-  // Ensure all heroes have evs
-  Object.values(META.family||{}).forEach(h=>{ if(!h.evs) h.evs = emptyEVs(); if(!h.traits) h.traits=[]; if(!h.birthAspect) h.birthAspect='Steel'; if(!h.birthFlags) h.birthFlags={}; });
-  showStartScreen();
+  Object.values(META.family||{}).forEach(h=>{
+    if(!h.evs) h.evs=emptyEVs();
+    if(!h.traits) h.traits=[];
+    if(!h.birthAspect) h.birthAspect='Steel';
+    if(!h.birthFlags) h.birthFlags={};
+  });
+  if(Array.isArray(META.retiredPool)){
+    META.retiredPool=META.retiredPool.filter(id=>{
+      const r=META.family[id];
+      if(!r) return false;
+      return getBreedUses(r).left>0;
+    });
+  }
+  saveMeta();
+  const small=window.matchMedia('(max-width: 420px)').matches;
+  if(small&&localStorage.getItem(UI_KEY)===null){
+    UI.logCollapsed=true;
+    saveUI();
+  }
+  loadUI();
+  if(typeof UI.difficulty!=='number') UI.difficulty=1;
+  setCombatLogCollapsed(UI.logCollapsed);
+  updateDifficultyUI();
+  updateRootDepthHeader();
+  showStartScreen(); // Handles opening narrative gate internally
+  setTimeout(applyResponsiveLayout,0);
 };
 
 
